# whisperclip

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: api.rs  audio.rs  config.rs  db.rs  input.rs  local_stt.rs  log.rs  main.rs  tts.rs  ui.rs
src/tests/: config_tests.rs  db_tests.rs  mod.rs  model_download_tests.rs
