[package]
name = "whisperclip"
version = "0.1.14"
edition = "2024"
authors = ["Adolfo Usier"]
license = "MIT"
description = "Floating voice-to-text tool for Linux with local and API-based transcription"
repository = "https://github.com/adolfousier/whisperclip"

[dependencies]
gtk4 = "0.9"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
whisper-rs = "0.15"
rubato = "0.14"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
